[package]
name = "shoutout"
version = "0.2.0"
edition = "2024"
authors = ["José Almeida <jose.afga@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.145"
worker-kv = "0.9.0"
oauth2 = "5.0.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
boa_engine = { version = "0.21", features = ["js"] }
cookie = "0.18"
regex = "1.12"
scraper = "0.25"
url = "2.5"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
strip = true
opt-level = "s"
